[package]
name = "nglue"
version = "0.0.2"
edition = "2021"
authors = ["Kushal Das <kushal@sunet.se>"]
description = "Glue tool to pass nagios data."
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }

[profile.release]
strip = true 
opt-level = "z" 
lto = true
