[package]
name = "nglue"
version = "0.1.0"
edition = "2021"
authors = ["Kushal Das <kushal@sunet.se>"]
description = "Glue tool to pass nagios data."
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
ureq = { version = "*", features = ["json"] }

[profile.release]
strip = true 
opt-level = "z" 
lto = true
